// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove alert after timeout: cleared alert 1`] = `
<WithButton>
  <AlertProvider>
    <AlertPanel
      alerts={Array []}
      onCloseAlert={[Function]}
    >
      <AlertGroup
        isToast={true}
      >
        <Portal
          containerInfo={
            <div>
              <ul
                class="pf-c-alert-group pf-m-toast"
              />
            </div>
          }
        >
          <AlertGroupInline
            isToast={true}
          >
            <ul
              className="pf-c-alert-group pf-m-toast"
            />
          </AlertGroupInline>
        </Portal>
      </AlertGroup>
    </AlertPanel>
    <Button
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add
      </button>
    </Button>
  </AlertProvider>
</WithButton>
`;

exports[`remove alert after timeout: with alert 1`] = `
<WithButton>
  <AlertProvider>
    <AlertPanel
      alerts={Array []}
      onCloseAlert={[Function]}
    >
      <AlertGroup
        isToast={true}
      >
        <Portal
          containerInfo={
            <div>
              <ul
                class="pf-c-alert-group pf-m-toast"
              />
            </div>
          }
        >
          <AlertGroupInline
            isToast={true}
          >
            <ul
              className="pf-c-alert-group pf-m-toast"
            />
          </AlertGroupInline>
        </Portal>
      </AlertGroup>
    </AlertPanel>
    <Button
      onClick={[Function]}
    >
      <button
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add
      </button>
    </Button>
  </AlertProvider>
</WithButton>
`;

exports[`renders empty alert panel 1`] = `
<AlertPanel
  alerts={Array []}
  onCloseAlert={[Function]}
>
  <AlertGroup
    isToast={true}
  >
    <Portal
      containerInfo={
        <div>
          <ul
            class="pf-c-alert-group pf-m-toast"
          />
        </div>
      }
    >
      <AlertGroupInline
        isToast={true}
      >
        <ul
          className="pf-c-alert-group pf-m-toast"
        />
      </AlertGroupInline>
    </Portal>
  </AlertGroup>
</AlertPanel>
`;
